--- a/index.html
+++ b/index.html
@@ -1,45 +1,19 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Missing File debugging</title>
+</head>
 
- <!doctype html>
- <h1>KGOMOTSO MALATJI'S PORTOFOLIO</h1>
- <h2>I am a Web Developer</h2>
- <hr />
+<link rel="stylesheet" href="../SRC/style.css">
+<link rel="stylesheet" href="../SRC/hello.js">
+<body>
 
-
- <h3>The best movies according to Kgomotso</h3>
- <h4>My top 3 Movies of all:</h4>
-
-<hr />
-<img src="../4.3 HTML Porfolio Project/assets/images/Movie Ranking.png">
-
-
-<br />
-<a href="./public/birthday-invite.html">Birthday Invite project</a>
-
-<h3>It's My Birthday</h3>
-<h4>On 19th April</h4>
-<img src="../4.3 HTML Porfolio Project/assets/images/Birthday.png">
-<hr />
-<a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
+    <h1>SHECODES PLUS</h1>
+    <h2>Missing File debugging</h2>
 
 
-
-
-
- 
- 
- 
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+</body>
+<script src="hello.js"></script>
+</html>
